# CPPLabs

./: CMakeLists.txt  main.cpp  surd  tema
Surd/: Assassin.cpp  Assassin.h  main.cpp
assignment1/ex1/: Time.cpp  Time.h  main.cpp
assignment1/ex2/: ReadWords.cpp  WordsArray.cpp  WordsArray.h  main.cpp  outfile  searchwords  testwords.txt  textfile
assignment2/: Person.cpp  Person.h  Student.cpp  Student.h
assignment3/ex1/: Employee.cpp  Employee.h  List.cpp  List.h  emps.txt  main.cpp
assignment3/ex2/: ChMatrix.cpp  ChMatrix.h  main.cpp  words.txt  wordstofind.txt
lab1/lab1b/: lab1b.cpp
lab1/lab1c/: Hello.cpp  Hello.h
lab1/lab1d/: args.cpp
lab1/lab1e/: average.cpp
lab1a/: lab1a.cpp
lab1b/: Data.txt
lab1c/lab1c/: Hello.cpp  Hello.h  Hello.java  Hellomain.cpp
lab2/: ReadArray.cpp  ReadArray.h  Stats.cpp  Stats.h  main.cpp
lab2/lab2prof/: Main.cpp  ReadArray.cpp  ReadArray.h  Stats.cpp  Stats.h  WriteMain.cpp
lab3/lab3a/: lab3a.cpp
lab3/lab3b/: lab3b.cpp
lab4/: Complex.cpp  Complex.h  ComplexMain.cpp
lab5/: Student.cpp  Student.h
stack/: Stack.cpp  Stack.h
