cmake_minimum_required(VERSION 3.12)
project(CPPLabs)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPPLabs assignment1/ex2/ReadWords.cpp assignment1/ex2/ReadWords.h assignment1/ex2/WordsArray.cpp assignment1/ex2/WordsArray.h assignment1/ex2/main.cpp)
#assignment1/ex1/Time.h assignment1/ex1/Time.cpp assignment1/ex1/main.cpp